<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/navigation_recent"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_collections_bookmark_24"
        android:title="@string/title_recents" />

    <item
        android:id="@+id/navigation_category"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_category_24"
        android:title="@string/title_categories" />
    <item
        android:id="@+id/navigation_featured"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_star_24"
        android:title="@string/title_featured" />
    <item
        android:id="@+id/navigation_fav"
        android:enabled="true"
        android:icon="@drawable/ic_favorite_vd_theme_24px"
        android:title="@string/title_fav" />
</menu>
