<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="?attr/materialCardViewFilledStyle"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="?attr/colorOnSurfaceInverse"
    app:cardCornerRadius="@dimen/mtrl_card_dragged_z"
    app:cardElevation="3dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:orientation="horizontal">

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <ImageButton
                android:id="@+id/bt_close"
                android:layout_width="?attr/actionBarSize"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/selectableItemBackgroundBorderless"
                app:srcCompat="@drawable/ic_baseline_close_24"
                app:tint="@color/md_theme_light_outline" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="-40dp"
            android:orientation="vertical"
            android:padding="@dimen/spacing_large">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="true"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    app:srcCompat="@mipmap/ic_launcher_round" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_middle"
                    android:text="@string/app_name"
                    android:textAppearance="?attr/textAppearanceTitleLarge"
                    android:textStyle="bold" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_small"
                    android:text="@string/app_version"
                    android:textAppearance="?attr/textAppearanceLabelLarge"
                    android:textColor="?attr/colorControlNormal" />
            </LinearLayout>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="5dp"
                android:layout_marginTop="@dimen/spacing_large"
                android:gravity="center"
                android:text="@string/about_text"
                android:textAlignment="center"
                android:textAppearance="?attr/textAppearanceBodyMedium" />
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_more_apps"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="CHECK MORE APPS"
            android:textColor="?attr/colorControlNormal" />

        <View
            android:layout_width="0dp"
            android:layout_height="@dimen/spacing_middle" />

        <com.balysv.materialripple.MaterialRippleLayout
            android:id="@+id/bt_getcode"
            android:layout_width="match_parent"
            android:layout_height="@dimen/spacing_xxlarge"
            android:background="?attr/colorPrimary">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="RATE THIS APP"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                android:textColor="@android:color/white"
                app:fontFamily="sans-serif-medium" />
        </com.balysv.materialripple.MaterialRippleLayout>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>
